# fannkuch-redux

./: README.md  benchmarksgame.which-programs-are-fastest-firstlast.u64q.20160218.svgz  bin  fannkuch-redux.cabal  stack.yaml
app/: fannkuchredux.ghc-4.hs
resources/: benchmarksgame.which-programs-are-fastest-firstlast.u64q.20160412.svgz  benchmarksgame.which-programs-are-fastest-firstlast.u64q.20160413.svgz  benchmarksgame.which-programs-are-fastest-middle.u64.20151022.svgz
src/: fannkuch-redux-naive.hs  fannkuch-redux.hs
