name:                fannkuch-redux
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/jamesdbrock/fannkuch-redux#readme
license:             BSD3
author:              James Brock
maintainer:          jamesbrock@gmail.com
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

-- executable for new fannkuch-redux
executable fannkuch-redux
  hs-source-dirs:      src
  main-is:             fannkuch-redux.hs
  ghc-options:         -fllvm -O2 -threaded -XBangPatterns -XScopedTypeVariables -rtsopts -Wall
  build-depends:       base,vector,async
  default-language:    Haskell2010

-- executable for fannkuch-redux Haskell GHC #4
-- http://benchmarksgame.alioth.debian.org/u64q/program.php?test=fannkuchredux&lang=ghc&id=4
executable fannkuch-redux-4
  hs-source-dirs:      src
  main-is:             fannkuch-redux-4.hs
  ghc-options:         -fllvm -O2 -XBangPatterns -threaded -rtsopts
  build-depends:       base,vector
  default-language:    Haskell2010

-- executable for fannkuch-redux-naive
executable fannkuch-redux-naive
  hs-source-dirs:      src
  main-is:             fannkuch-redux-naive.hs
  ghc-options:         -fllvm -O2 -rtsopts -Wall
  build-depends:       base
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/jamesdbrock/fannkuch-redux
